# essential-wallet

./: Cargo.toml  README.md  essential-wallet.nix  flake.nix  overlay.nix  shell.nix
.github/workflows/: ci.yml
crates/sign/: Cargo.toml  README.md
crates/sign/src/: lib.rs
crates/wallet/: Cargo.toml  README.md
crates/wallet/src/: lib.rs  main.rs  store.rs
