[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Essential Contributions <contact@essentialcontributions.com>"]
homepage = "https://essential.builders/"
license = "Apache-2.0"
repository = "https://github.com/essential-contributions/essential-wallet"

[workspace.dependencies]
anyhow = "1.0.80"
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
cryptex = { version = "1.8.1", features = ["file"] }
dirs = "5.0"
ed25519-dalek = "2.1.0"
essential-hash = "0.1.0"
essential-sign = "0.1.0"
essential-types = "0.1.0"
hex = "0.4.3"
postcard = { version = "1.0.8", default-featues = false, features = ["alloc"] }
rand = "0.8.5"
rpassword = "7.3.1"
rusqlite = { version = "0.30", features = ["bundled"] }
secp256k1 = { version = "0.29", features = ["recovery", "global-context", "rand"] }
sha2 = "0.10.8"
serde = "1.0.195"
serde_bytes = "0.11.14"
serde_json = "1.0.80"
tempfile = "3.10.0"

essential-signer = { path = "crates/sign" }