[package]
edition = "2021"
name = "essential-signer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
essential-hash = { workspace = true }
essential-sign = { workspace = true }
essential-types = { workspace = true }
hex = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
