[package]
name = "essential-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
cryptex = { workspace = true }
dirs = { workspace = true }
essential-sign = { workspace = true }
essential-signer = { workspace = true }
essential-types = { workspace = true }
rand = { workspace = true }
rpassword = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true, optional = true }

[features]
test-utils = ["dep:tempfile"]