[package]
name = "essential-wallet"
version = "0.6.0"
description = "A wallet for storing pub/priv keypairs for testing purposes."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
# cryptex = { workspace = true }
dirs = { workspace = true }
essential-sign = { workspace = true }
essential-signer = { workspace = true }
essential-types = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rpassword = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true, optional = true }

[features]
test-utils = ["dep:tempfile"]